src/tests/testfiles/binary-operators/23.txt
testfiles/binary-operators/23.c:2:5: error: invalid operands to logical 'or' (have 'float' and 'int')
1.0 || 0;
^
